Adding theming, swizzled CC and ideal images

--- a/blog/2023-01-26.md
+++ b/blog/2023-01-26.md
@@ -1,11 +1,12 @@
 ---
 slug: one-26-release
-title: The Arm Superstructure Build Section is out and minor additions
-authors: [jack]
+title: Superstructure Build Section Released
 tags: [Manual Additions, Videos Released, Manual Changes]
 date: 2023-01-20T18:00
 ---
 
-Sup, we released our arm superstructure build section along with the videos.
+Sup, we released our superstructure build section along with the videos.
+
+<br/>
 
 Additionally we forgot to add the chassis cutoff step to the superstructure section, you can find it at the end of section.
